fixed links, broken images, background color font, and readability

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,29 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  line-height: 120%;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 100%
+}
+
+p {
+  font-size: 14px;
 }
 
 nav {
